[project]
name = "llsim"
version = "1.0.0"
description = ""
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
requires-python = ">=3.12"
dependencies = [
    "cbrkit[graphs,llm,transformers,nlp,eval]>=0,<1",
    "arguebuf>=2,<3",
    "typer>=0,<1",
    "httpx[http2]>=0.27.2",
]

[project.scripts]
llsim = "llsim.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv.sources.cbrkit]
path = "../cbrkit"
editable = true
