[project]
name = "llsim"
version = "1.0.0"
description = ""
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
requires-python = ">=3.12"
dependencies = [
    "arguebuf>=2,<3",
    "cbrkit[graphs,llm,transformers,nlp,eval]>=0.24,<1",
    "httpx[http2]>=0.27.2",
    "typer>=0,<1",
]

[project.scripts]
llsim = "llsim.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
